--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<h1>Hello !</h1>
+<!DOCTYPE html>
+
+<html lang= "en">
+<meta charset = "UTF-8">
+<title>Static Site</title>
+<meta name = "viewport" content = "width = device-width, initial-scale -1">
+
+<body>
+    <h1>Hello !</h1>
+
+</body>
+
+</html>
