--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 
 <html lang= "en">
-<meta charset = "UTF-8">
-<title>Static Site</title>
-<meta name = "viewport" content = "width = device-width, initial-scale -1">
-
+    <head>
+        <meta charset = "UTF-8">
+        <meta name = "viewport" content = "width = device-width, initial-scale -1">
+        <title>Static Site</title>
+    </head>
 <body>
     <h1>Hello !</h1>
 
